# agric-trade-system

./: main.py  pyproject.toml
config/: settings.py  urls.py
theme/static_src/: package-lock.json
theme/templates/: base.html
trade/: admin.py  filters.py  forms.py  models.py  views.py
trade/migrations/: 0001_initial.py  0002_tradedata_trade_trade_country_9b06da_idx.py
trade/templates/trade/: dashboard.html  login.html  upload.html
