[project]
name = "trade-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=5.2.11",
    "django-browser-reload>=1.21.0",
    "django-filter>=25.2",
    "django-tailwind>=4.4.2",
    "djangorestframework>=3.16.1",
    "gunicorn>=25.1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "psycopg[binary]>=3.3.3",
]
